# earth-engine

./: .clippy.toml  .gitignore  ALLOCATION_OPTIMIZATIONS.md  ASYNC_MESH_INTEGRATION.md  BUFFER_LIFETIME_FIX_SUMMARY.md  BUFFER_MIGRATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TEST_EXECUTION_REPORT.md  Cargo.toml  Cargo_workspace.toml  DEBUG_ANALYSIS_README.md  DEBUG_CAPTURE_README.md  DIAGNOSTIC_LOGGING_SUMMARY.md  DIRTY_CHUNK_SYSTEM_PLAN.md  DOCUMENTATION_REVIEW_2025.md  EARTH_ENGINE_VISION_2025.md  ENVIRONMENT_COHERENCE.md  EXECUTION_PATH_TRACE.md  FREEZE_DIAGNOSIS.md  GPU_BUFFER_ARCHITECTURE_PLAN.md  GPU_BUFFER_REFACTORING_PLAN.md  GPU_BUFFER_REFACTORING_SUMMARY.md  GPU_MEMORY_LEAK_FIX.md  GPU_WORKLOAD_ANALYSIS_README.md  INTEGRATION_SUMMARY.md  LICENSE  MASTER_ROADMAP.md  PHYSICS_INTEGRATION_REPORT.md  POST_MORTEM.md  PURE_SOA_GPU_ARCHITECTURE_PLAN.md  QA_COMPILATION_VERIFICATION_REPORT.md  QA_REPORT.md  QUEUE_PROCESSING_FIXES.md  README.md  RECOVERY_PLAN.md  SPAWN_PREGENERATION_FIX.md  SPRINT_35_1_FINAL_VERIFICATION.md  SPRINT_35_1_VERIFICATION.md  SPRINT_38_SYSTEM_INTEGRATION_REPORT.md  (+36 more)
.github/workflows/: dop_enforcement.yml  integration_tests.yml
backup/weather/: mod.rs  weather_types.rs
benches/: dop_vs_oop.rs
clippy_lints/: Cargo.toml
clippy_lints/src/: dop_enforcement.rs  lib.rs
docs/: COMPILATION_FIX_SUMMARY.md  DATA_ORIENTED_TRANSITION_PLAN.md  DOCUMENTATION_AUDIT_JUNE_2025.md  DOCUMENTATION_GUIDE.md  GIT_SETUP_INSTRUCTIONS.md  GPU_ONLY_WASM_SOLUTION.md  MASTER_ROADMAP.md  README.md  RELEASE_1_0_ASSESSMENT.md  ROADMAP_ARCHIVED.md  RUST_VS_JS_COMPARISON.md  SCREENSHOT_IMPLEMENTATION.md  SHADER_AUDIT_RESULTS.md  SOA_GUIDELINES.md  SPATIAL_INDEX_ARCHITECTURE.md  SPRINT_12_SUMMARY.md  SPRINT_19_SUMMARY.md  SPRINT_21_READINESS.md  SPRINT_35_1_QUALITY_CHECKLIST.md  UNIFIED_WORLD_GUIDE.md  UNSAFE_AUDIT.md  VERSIONING.md  WASM_STATUS.md  WGSL_SHADER_GUIDE.md  WINDOWS_GIT_SYNC_GUIDE.md  WORLD_GUIDE.md  WORLD_MODULE_MIGRATION.md  WORLD_UNIFICATION_STATUS.md  WSL_GPU_WORKAROUNDS.md  gpu_world_performance.md  particles_migration.md  player_data_dop_architecture.md  sprint-35-performance-fixes.md  weather_gpu_conversion.md
docs/api/: README.md
docs/architecture/: DATA_ACCESS_PATTERNS.md  DATA_ORIENTED_ARCHITECTURE.md  DATA_ORIENTED_DESIGN.md  DOP_CALLBACK_SYSTEM.md  GPU_DRIVEN_ARCHITECTURE.md  OVERVIEW.md  SPATIAL_INDEX_ARCHITECTURE.md
docs/archive/: DOCUMENTATION_REVIEW_2025.md  DUPLICATE_FILES_ANALYSIS.md  JS_ENGINE_STRUCTURE.md  MISSING_ENGINE_FEATURES.md  PARALLEL_JS_ENGINE_PLAN.md  RECOVERY_PLAN.md  RELEASE_1_0_ASSESSMENT.md  WASM_STATUS.md  gpu_world_performance.md
docs/audits/: PHASE_1_ENGINE_AUDIT.md
docs/examples/: README.md
docs/guides/: CARGO_COMMANDS_GUIDE.md  DATA_ORIENTED_PROGRAMMING.md  DOCUMENTATION_GUIDE.md  DOP_CODE_REVIEW_CHECKLIST.md  DOP_ENFORCEMENT.md  ENVIRONMENT_COHERENCE.md  GIT_SETUP_INSTRUCTIONS.md  UNSAFE_AUDIT.md  VERSIONING.md
docs/performance/: AUDIT_SUMMARY.md  PERFORMANCE_AUDIT.md  PERFORMANCE_CLAIMS_AUDIT.md  README.md
docs/sprints/: INTEGRATION_TEST_DELIVERABLES.md  PHYSICS_INTEGRATION_REPORT.md  SPRINT_21_READINESS_ASSESSMENT.md  SPRINT_21_SUMMARY.md  SPRINT_22_SUMMARY.md  SPRINT_24_SUMMARY.md  SPRINT_25_SUMMARY.md  SPRINT_26_SUMMARY.md  SPRINT_27_SUMMARY.md  SPRINT_28_SUMMARY.md  SPRINT_29_SUMMARY.md  SPRINT_31_PROCESS_TRANSFORM.md  SPRINT_32_DYNAMIC_ATTRIBUTES.md  SPRINT_35_1_EMERGENCY.md  SPRINT_35_2_DOP_REALITY.md  SPRINT_35_4_INTEGRATION.md  SPRINT_35_5_CERTIFICATION.md  SPRINT_35_ARCHITECTURE_FINALIZATION.md  SPRINT_35_COMPLETE.md  SPRINT_37_COMPLETE.md  SPRINT_37_DOP_PERFORMANCE_ANALYSIS.md  SPRINT_37_DOP_REALITY_CHECK.md  SPRINT_37_SOA_ANALYSIS.md  SPRINT_37_SOA_IMPLEMENTATION.md  SPRINT_37_ZERO_ALLOC_IMPLEMENTATION.md  SPRINT_38_SYSTEM_INTEGRATION_REPORT.md  SPRINT_HISTORY.md
earth-engine-js/: IMPLEMENTATION_PLAN.md  README.md  index.html  package.json
examples/: README.md  async_mesh_integration.rs  buffer_layouts_usage.rs  check_player_hot_data_size.rs  chunk_loading_demo.rs  crafting_system.rs  diagnostic_logging_test.rs  dop_performance_benchmark.rs  engine_testbed.rs  gpu_engine_testbed.rs  gpu_reality_check.rs  gpu_terrain_test.rs  gpu_workload_analysis.rs  gpu_workload_engine_analysis.rs  integration_test.rs  inventory_system.rs  mesh_builder_integration.rs  minimal_engine.rs  multiplayer.rs  performance_claim_validator.rs  performance_claim_validator_simple.rs  physics_integration_demo.rs  player_data_dop_benchmark.rs  player_data_dop_integration.rs  profiler_integration.rs  reality_check_demo.rs  save_load_integration_demo.rs  soa_benchmark.rs  sprint_37_dop_benchmarks.rs  test_camera_chunk_priority.rs  test_chunk_boundaries.rs  test_movement_input.rs  test_multi_y_chunks.rs  test_new_spawn_finder.rs  test_soa_terrain_gen.rs  test_spawn_fix.rs  test_spawn_pregeneration.rs  test_terrain_cpu.rs  test_terrain_strips.rs  test_unified_world.rs  (+2 more)
scripts/: check_dop_compliance.sh  update_version.sh  verify_integration.sh
sprints/: sprint17_summary.md
src/: constants.rs  error.rs  event_system.rs  lib.rs  main.rs  panic_handler.rs  system_monitor.rs  wasm_demo.rs  world_state.rs
tests/: README.md  chunk_loading_throttle_test.rs  cursor_lock_test.rs  dop_integration.rs  engine_run_test.rs  gpu_compute_validation.rs  gpu_driven_integration.rs  gpu_memory_cleanup_test.rs  gpu_rendering_integration.rs  gpu_shader_test.rs  mesh_optimization_test.rs  movement_physics_integration.rs  network_persistence_integration.rs  optimization_pipeline_integration.rs  performance_regression.rs  reality_check_profiler_integration.rs  rendering_systems_test.rs  save_load_stress.rs  spatial_index_integration.rs  spawn_chunk_integration.rs  test_parallel_chunk_manager.rs
tools/: allocation_scanner  allocation_scanner.rs
wasm-demo/: Cargo.toml
web/: DEBUG.md  README.md  check.html  demo.html  earth-engine-gpu.js  earth_engine_wasm_demo.js  earth_engine_wasm_demo_bg.wasm  gpu-only-demo.html  index-dev.html  index-wasm.html  index.html  run.html  serve.py  test-gpu-compute.html  test.html  webgpu-test.html
(+677 files in other folders)
