[package]
name = "earth-engine"
version = "0.35.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:tokio", "dep:zstd", "dep:lz4_flex", "dep:notify"]
web = ["wasm-bindgen", "web-sys", "console_error_panic_hook", "console_log", "wasm-bindgen-futures"]

[dependencies]
# Windowing and graphics
winit = "0.29"
wgpu = { version = "0.19", features = ["webgl"] }

# Math
cgmath = "0.18"
glam = { version = "0.25", features = ["serde"] }

# Noise generation
noise = "0.8"

# Serialization
bytemuck = { version = "1.14", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime for wgpu  
pollster = "0.3"

# Image loading (for future textures)
image = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random number generation
rand = "0.8"

# Bit manipulation
bit-vec = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Dynamic loading
libloading = "0.8"

# Compression
flate2 = "1.0"
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }

# Archive
tar = "0.4"

# Checksums
crc32fast = "1.3"

# Date/time
chrono = "0.4"

# File watching
notify = { version = "6.1", optional = true }

# Async utilities
futures = "0.3"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "time", "sync"], optional = true }

# Parallel processing
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Memory mapping and channels
memmap2 = "0.9"
flume = "0.11"

# Fast hashing
rustc-hash = "1.1"

# Lazy static
lazy_static = "1.4"

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", features = ["futures-core-03-stream"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.10"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "Performance",
    "console",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "Response",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[[example]]
name = "inventory_system"
path = "examples/inventory_system.rs"

[[example]]
name = "crafting_system"
path = "examples/crafting_system.rs"

[[example]]
name = "multiplayer"
path = "examples/multiplayer.rs"

[[bin]]
name = "parallel_benchmark"
path = "src/bin/parallel_benchmark.rs"

[[bin]]
name = "parallel_test"
path = "src/bin/parallel_test.rs"

[[bin]]
name = "async_mesh_benchmark"
path = "src/bin/async_mesh_benchmark.rs"

[[bin]]
name = "async_render_test"
path = "src/bin/async_render_test.rs"

[[bin]]
name = "parallel_lighting_benchmark"
path = "src/bin/parallel_lighting_benchmark.rs"

[[bin]]
name = "parallel_lighting_test"
path = "src/bin/parallel_lighting_test.rs"

[[bin]]
name = "profile_baseline"
path = "src/bin/profile_baseline.rs"

[[bin]]
name = "analyze_hot_paths"
path = "src/bin/analyze_hot_paths.rs"

[[bin]]
name = "soa_benchmark"
path = "src/bin/soa_benchmark.rs"

[[bin]]
name = "gpu_driven_test"
path = "src/bin/gpu_driven_test.rs"

[[bin]]
name = "streaming_test"
path = "src/bin/streaming_test.rs"

[[bin]]
name = "web_benchmark"
path = "src/bin/web_benchmark.rs"

[[bin]]
name = "morton_benchmark"
path = "src/bin/morton_benchmark.rs"

[[bin]]
name = "shared_memory_test"
path = "src/bin/shared_memory_test.rs"

[[bin]]
name = "morton_test"
path = "src/bin/morton_test.rs"

[[bin]]
name = "gpu_culling_test"
path = "src/bin/gpu_culling_test.rs"

[[bin]]
name = "test_instance"
path = "src/bin/test_instance.rs"

[[bin]]
name = "test_process"
path = "src/bin/test_process.rs"

[[bin]]
name = "victory_lap_benchmark"
path = "src/bin/victory_lap_benchmark.rs"