[package]
name = "earth-engine"
version = "0.35.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:tokio", "dep:zstd", "dep:lz4_flex", "dep:notify"]

[dependencies]
# Windowing and graphics
winit = "0.29"
wgpu = { version = "0.19", features = ["webgl"] }

# Math
cgmath = "0.18"
glam = { version = "0.25", features = ["serde"] }

# Noise generation
noise = "0.8"

# Serialization
bytemuck = { version = "1.14", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime for wgpu  
pollster = "0.3"

# Image loading (for future textures)
image = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random number generation
rand = "0.8"

# Bit manipulation
bit-vec = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Dynamic loading
libloading = "0.8"

# Compression
flate2 = "1.0"
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }

# Archive
tar = "0.4"

# Checksums
crc32fast = "1.3"

# Date/time
chrono = "0.4"

# File watching
notify = { version = "6.1", optional = true }

# Async utilities
futures = "0.3"
futures-timer = "3.0"
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "fs", "time", "sync"], optional = true }

# Parallel processing
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Memory mapping and channels
memmap2 = "0.9"
flume = "0.11"

# Fast hashing
rustc-hash = "1.1"

# Lazy static
lazy_static = "1.4"

# System interface
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
criterion = { workspace = true }

# Benchmarks
[[bench]]
name = "dop_vs_oop"
harness = false

# Rendering Examples
[[example]]
name = "async_mesh_integration"
path = "examples/rendering/async_mesh_integration.rs"

[[example]]
name = "mesh_builder_integration"
path = "examples/rendering/mesh_builder_integration.rs"

# World Generation Examples
[[example]]
name = "chunk_loading_demo"
path = "examples/world_generation/chunk_loading_demo.rs"

[[example]]
name = "test_chunk_boundaries"
path = "examples/world_generation/test_chunk_boundaries.rs"

[[example]]
name = "test_noise_detailed"
path = "examples/world_generation/test_noise_detailed.rs"

[[example]]
name = "test_noise_values"
path = "examples/world_generation/test_noise_values.rs"

[[example]]
name = "test_spawn_pregeneration"
path = "examples/world_generation/test_spawn_pregeneration.rs"

[[example]]
name = "test_terrain_generation"
path = "examples/world_generation/test_terrain_generation.rs"

# Gameplay Examples
[[example]]
name = "data_inventory_example"
path = "examples/gameplay/data_inventory_example.rs"

[[example]]
name = "test_spawn_position"
path = "examples/gameplay/test_spawn_position.rs"

# Particle Examples
[[example]]
name = "dop_particles"
path = "examples/particles/dop_particles.rs"

# Debugging Examples
[[example]]
name = "debug_screenshot_issue"
path = "examples/debugging/debug_screenshot_issue.rs"

[[example]]
name = "gpu_memory_leak_fix"
path = "examples/debugging/gpu_memory_leak_fix.rs"

[[example]]
name = "trace_spawn_detail"
path = "examples/debugging/trace_spawn_detail.rs"

[[example]]
name = "trace_terrain_at_origin"
path = "examples/debugging/trace_terrain_at_origin.rs"

# Engine Examples
[[example]]
name = "engine_testbed"
path = "examples/engine_testbed.rs"

[[example]]
name = "minimal_engine"
path = "examples/minimal_engine.rs"

# Earth Engine is now a pure library
# All binaries have been moved to examples or removed
# Use `cargo run --example engine_testbed` for comprehensive testing
# Use `cargo run --example minimal_engine` for simple usage examples