[package]
name = "hearth-engine"
version = "0.39.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:tokio", "dep:zstd", "dep:lz4_flex", "dep:notify"]

[dependencies]
# Windowing and graphics
winit = "0.29"
wgpu = { version = "0.19", features = ["webgl"] }

# Math
cgmath = "0.18"
glam = { version = "0.25", features = ["serde"] }

# Noise generation
noise = "0.8"

# Serialization
bytemuck = { version = "1.14", features = ["derive"] }
encase = { version = "0.7", features = ["glam"] }

# Compile-time validation
static_assertions = "1.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime for wgpu  
pollster = "0.3"

# Image loading (for future textures)
image = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Procedural macros
paste = "1.0"

# Random number generation
rand = "0.8"

# Bit manipulation
bit-vec = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Dynamic loading
libloading = "0.8"

# Compression
flate2 = "1.0"
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }

# Archive
tar = "0.4"

# Checksums
crc32fast = "1.3"

# Date/time
chrono = "0.4"

# File watching
notify = { version = "6.1", optional = true }

# Async utilities
futures = "0.3"
futures-timer = "3.0"
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "fs", "time", "sync"], optional = true }

# Parallel processing
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Memory mapping and channels
memmap2 = "0.9"
flume = "0.11"

# Fast hashing
rustc-hash = "1.1"

# Lazy static
lazy_static = "1.4"

# Regular expressions
regex = "1.10"

# System interface
libc = "0.2"

[build-dependencies]
encase = "0.7"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5.1", features = ["html_reports"] }

# Benchmarks removed during cleanup

# Examples
[[example]]
name = "test_unified_world"
path = "examples/test_unified_world.rs"

[[example]]
name = "weather_generation"
path = "examples/weather_generation.rs"

# Hearth Engine is now a pure library
# All binaries have been moved to examples or removed
# Use `cargo run --example test_unified_world` for testing
# Use `cargo run --example weather_generation` for weather system examples