[package]
name = "hearth_engine_clippy_lints"
version = "0.37.0"
edition = "2021"
description = "Custom Clippy lints for Hearth Engine DOP enforcement"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = "0.1"

[build-dependencies]
rustc_tools_util = "0.3"

# These dependencies are required for custom clippy lints but versions
# must match the rustc version being used
[dependencies.rustc_driver]
version = "=1.70.0"
optional = true

[dependencies.rustc_hir] 
version = "=1.70.0"
optional = true

[dependencies.rustc_lint]
version = "=1.70.0" 
optional = true

[dependencies.rustc_session]
version = "=1.70.0"
optional = true

[dependencies.rustc_span]
version = "=1.70.0"
optional = true

[features]
default = []
rustc_private = [
    "rustc_driver",
    "rustc_hir", 
    "rustc_lint",
    "rustc_session",
    "rustc_span"
]